# cashflow

./: .gitignore  README.md  pyproject.toml
src/cashflow/: app.py  database.py  env.py  formatting.py  pdf_importer.py  reports.py  settings.py  table_items.py  ui.py
